--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
         "slim/twig-view": "2.0",
         "illuminate/database": "^7.2",
         "respect/validation": "^1.1",
-        "slim/csrf": "0.6.0"
+        "slim/csrf": "0.6.0",
+        "slim/flash": "0.1.0"
     },
 
     "autoload": {
